# total-recall

./: CLAUDE.md  Cargo.toml  README.md
.claude/commands/: release.md  validate.md
assets/: kuato_comic.ansi  mars_comic.ansi  rekall_comic.ansi
docs/: ghostty-cli.md
scripts/: release.sh
src/: app.rs  config.rs  event.rs  main.rs
src/models/: agent.rs  agent_registry.rs  message.rs  mod.rs  project.rs  session.rs
src/screens/: agent_detail.rs  browser.rs  dashboard.rs  mod.rs  spawn_wizard.rs
src/services/: agent_manager.rs  ascii_art.rs  clipboard.rs  mod.rs  session_store.rs  theme.rs  worktree_manager.rs
src/utils/: mod.rs
