[package]
name = "total-recall"
version = "0.2.6"
edition = "2021"
description = "TUI for browsing and resuming Claude Code sessions"
authors = ["Garrett"]
license = "MIT"

[[bin]]
name = "total-recall"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
ratatui-garnish = "0.1"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database for metadata
rusqlite = { version = "0.32", features = ["bundled"] }

# Clipboard
arboard = "3"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
rand = "0.8"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
async-trait = "0.1"
ansi-to-tui = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
open = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
